# gameboy-emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  build.sh
include/gbemu/common/: bitwise.h  logger.h  types.h  units.h
include/gbemu/core/: alu.h  bus.h  sm83.h
include/gbemutest/core/: alu_test.h  bus_test.h  instructions_test.h
src/: main.c
src/core/: alu.c  bus.c  sm83.c
test/: suite_test.c
test/core/: alu_test.c  bus_test.c  instructions_test.c
